# tangle-heap

./: .gitignore  Dockerfile  GoogleCloud.md  README.md  pyproject.toml
gcloud/foldseek-create-prostt5-db/: instruction.template  job.json.template  merge.sh  prep-general.sh.template  prep-task.sh.template  setup.py
gcloud/foldseek-swissprot/: instruction.template  job.json.template  prep-general.sh.template  setup.py
gcloud/hmmscan-ko/: instruction.template  job.json.template  prep-general.sh.template  setup.py
gcloud/hmmscan-pfam/: instruction.template  job.json  job.json.template  prep-general.sh.template  prep-task.sh.template  setup.py
heap/: __init__.py  foldseek.py  gcloud.py  hmm.py  ko.py
helpers/: ipr-pfam.py
scripts/: foldseek-swissprot.py  foldseek.py  hmmscan-ko.py  hmmscan-pfam.py  hmmscan.py  ko-assign.py  ko-filter-target.py  prost-search.py
staging/: cluster.py
staging/align/: fasta-re.py  generate-msas  muscle  tabularize-alignment.py
staging/cluster/: cluster  create.py  mmseqs-cluster
tests/: test_foldseek.py  test_gcloud.py  test_hmm.py  test_ko.py
