[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heap"
version = "0.1.2"
dependencies = [
  "tangle @ git+https://github.com/benjiec/tangle.git@4ae509b",
  "biopython>=1.81",
]
description = "Detection and classification using HMM and Structural Search"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
]

[tool.setuptools.packages.find]
where = ["."]
